# shairport-sync-metadata

./: Cargo.toml
src/: main.rs  metadata.rs
